knotoperator/1-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: k8s.gcr.io/external-dns/external-dns:v0.12.2
        resources: # added by atw
          requests:
            memory: "20Mi"
            cpu: "200m"
          limits:
            memory: "100Mi"
            cpu: "500m"
        args:
        - --source=ingress # service also possible
        - --provider=vultr
        - --registry=txt # added by atw
        - --txt-owner-id=98580 # added by atw
