knotoperator/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: "knotfree.net"  
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: vultr
    
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "gotohere.com" 
    http:
      paths:
      - backend:
          service:
            name: nginx-svc # nginx-svc # knotfreeaide
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: "knotfree.net" 
    http:
      paths:
      - backend:
          service:
            name: nginx-svc # nginx-svc # knotfreeaide
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: "*.knotfree.net" 
    http:
      paths:
      - backend:
          service:
            name: nginx-svc # nginx-svc # knotfreeaide
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "gotohere.com"
    - "knotfree.net"
    - "*.knotfree.net"
    secretName: wildcard-tls
